Changing name of pwithin

--- a/tutorials/Percent_Within.ipynb
+++ b/tutorials/Percent_Within.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Percent Within X (PWITHIN)\n",
+    "# Percent Within X\n",
     "\n",
     "The Percent Within X score evaluates how often a continuous single-valued forecast falls within a specified absolute error threshold of the observation. This is a simple and easy to explain metric, particularly useful for applications where a forecast is considered \"close enough\" if it lies within a certain band around the observation.\n",
     "\n",
-    "Unlike traditional error metrics (e.g. MAE or RMSE), the PWITHIN score does not penalise outliers more harshly- it simply counts whether each forecast is inside or outside the acceptable range. \n",
+    "Unlike traditional error metrics (e.g. MAE or RMSE), the PERCENT_WITHIN_X score does not penalise outliers more harshly- it simply counts whether each forecast is inside or outside the acceptable range. \n",
     "\n",
     "Two versions are supported:\n",
     "- Inclusive: Forecast is within or equal to the threshold (`|fcst - obs| ≤ τ`)\n",
@@ -27,7 +27,7 @@
     "- All errors outside the threshold are treated equally, whether they are just over or wildly off.\n",
     "- The threshold creates an artificial cutoff that can distort optimisation.\n",
     "\n",
-    "As a result, PWITHIN is best understood as a user-facing diagnostic, valuable for answering operational questions like \"how often do we get within 2 degrees?\" However, it should not be used for model training or for rigorous forecast intercomparison.\n",
+    "As a result, PERCENT_WITHIN_X is best understood as a user-facing diagnostic, valuable for answering operational questions like \"how often do we get within 2 degrees?\" However, it should not be used for model training or for rigorous forecast intercomparison.\n",
     "\n",
     "For applications requiring properness, consider using metrics such as MAE, RMSE, or CRPS. \n",
     "\n",
@@ -36,13 +36,13 @@
     "Inclusive form:\n",
     "\n",
     "$$\n",
-    "\\text{PWITHIN} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| \\leq \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
+    "\\text{PERCENT_WITHIN_X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| \\leq \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
     "$$\n",
     "\n",
     "Exclusive form:\n",
     "\n",
     "$$\n",
-    "\\text{PWITHIN} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| < \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
+    "\\text{PERCENT_WITHIN_X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| < \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
     "$$\n",
     "\n",
     "Where:\n",
@@ -61,7 +61,7 @@
     "- Floating point precision can be controlled via `rounded_digits`.\n",
     "- The score is positively oriented: higher values indicate better agreement.\n",
     "\n",
-    "## Calculating the PWITHIN score in `scores`"
+    "## Calculating the PERCENT_WITHIN_X score in `scores`"
    ]
   },
   {
@@ -70,10 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores.continuous import pwithin, mae, pbias\n",
+    "from scores.continuous import percent_within_x, mae, pbias\n",
     "\n",
     "# You can view the documentation for the function by running the following\n",
-    "# help(pwithin)\n",
+    "# help(percent_within_x)\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -87,7 +87,7 @@
    "source": [
     "## Synthetic Forecast and Observation Data\n",
     "\n",
-    "To demonstrate the behavior of the Percent Within X (PWITHIN) score, we construct synthetic forecast and observation data with realistic characteristics.\n",
+    "To demonstrate the behavior of the Percent Within X (PERCENT_WITHIN_X) score, we construct synthetic forecast and observation data with realistic characteristics.\n",
     "\n",
     "The dataset simulates a gridded variable over:\n",
     "- 100 daily timesteps (`time`)\n",
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "percent_within = pwithin(fcst=fcst, obs=obs, threshold=2.0, is_inclusive=True, reduce_dims=[\"time\",\"location\"])\n",
+    "percent_within = percent_within_x(fcst=fcst, obs=obs, threshold=2.0, is_inclusive=True, reduce_dims=[\"time\",\"location\"])\n",
     "fig, ax = plt.subplots()\n",
     "percent_within.plot(ax=ax, marker='o')\n",
     "ax.set_title(\"Percent Within ±2 Units Across Lead Times\")\n",
@@ -327,8 +327,8 @@
     "reduce_dims = [\"time\",\"location\"]\n",
     "\n",
     "# Calculate percent within\n",
-    "pwithin_orig = pwithin(fcst=fcst, obs=obs, threshold=5.0, is_inclusive=True, reduce_dims=reduce_dims)\n",
-    "pwithin_hedged = pwithin(fcst=fcst_hedged, obs=obs, threshold=5.0, is_inclusive=True, reduce_dims=reduce_dims)\n",
+    "percent_within_x_orig = percent_within_x(fcst=fcst, obs=obs, threshold=5.0, is_inclusive=True, reduce_dims=reduce_dims)\n",
+    "percent_within_x_hedged = percent_within_x(fcst=fcst_hedged, obs=obs, threshold=5.0, is_inclusive=True, reduce_dims=reduce_dims)\n",
     "\n",
     "# Calculate mean absolute error\n",
     "mae_orig = mae(fcst=fcst, obs=obs, reduce_dims=reduce_dims)\n",
@@ -340,9 +340,9 @@
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(13, 4), sharex=True)\n",
     "\n",
-    "# --- PWITHIN subplot ---\n",
-    "pwithin_orig.plot(ax=axes[0], marker='o', label=\"Original\")\n",
-    "pwithin_hedged.plot(ax=axes[0], marker='x', label=\"Hedged ≥5\")\n",
+    "# --- PERCENT_WITHIN_X subplot ---\n",
+    "percent_within_x_orig.plot(ax=axes[0], marker='o', label=\"Original\")\n",
+    "percent_within_x_hedged.plot(ax=axes[0], marker='x', label=\"Hedged ≥5\")\n",
     "axes[0].set_title(\"Percent Within ±5 Knots\")\n",
     "axes[0].set_ylabel(\"Percent Within (%)\")\n",
     "axes[0].set_xlabel(\"Lead Time\")\n",
@@ -390,7 +390,7 @@
    "source": [
     "## Things to try next\n",
     "\n",
-    "Explore the `is_angular` option within pwithin, relevant if forecasting direction in degrees.\n",
+    "Explore the `is_angular` option within percent_within_x, relevant if forecasting direction in degrees.\n",
     "\n",
     "Explore the `rounded_digits` option which is meant to help control floating point precision issues. For example, a value that should be 5 might be imported as 4.999999998, causing it to incorrectly fall outside a threshold - rounding the error before comparison avoids this."
    ]
