Forgot to check all the places the score was renamed

--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,12 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will visualise the effects of hedging on performance. In the below scatterplots the entries falling between the dashed lines are within 5 knots of the observed. By changing any forecast below 5 knots to equal a forecast of exactly 5 knots, we bring more outcomes into the acceptable range (the diagonal dashed lines).  "
+    "Now we will visualise the effects of hedging on performance. In the below scatterplots the entries falling between the dashed lines are within 5 knots of the observed. By changing any forecast below 5 knots to equal a forecast of exactly 5 knots, we bring more outcomes into the acceptable range (the diagonal dashed lines). Already, the introduction of an over-forecasting bias of low values is obvious. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +300,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -315,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
