thumbnail for dm test stat

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -217,9 +217,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "983a61c5-67e1-42ac-b4d2-845adc694008",
+   "metadata": {},
+   "source": [
+    "[Diebold_Mariano_Test_Statistic.ipynb](../Diebold_Mariano_Test_Statistic.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f77b22c-9622-4b92-a637-75b4c7ed082c",
+   "metadata": {},
+   "source": [
+    "![Diebold_Mariano_Test_Statistic_Thumbnail](diebold_mariano_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b808378-1466-48ad-af3d-17a11bd0d85d",
+   "id": "c1b87003-1cc6-44b5-81bd-3bbf05ef3589",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -241,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
