Making sure docs render properly.

--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The Percent Within X score evaluates how often a continuous single-valued forecast falls within a specified absolute error threshold of the observation. This is a simple and easy to explain metric, particularly useful for applications where a forecast is considered \"close enough\" if it lies within a certain band around the observation.\n",
     "\n",
-    "Unlike traditional error metrics (e.g. MAE or RMSE), the PERCENT_WITHIN_X score does not penalise outliers more harshly- it simply counts whether each forecast is inside or outside the acceptable range. \n",
+    "Unlike traditional error metrics (e.g. MAE or RMSE), the percent within X score does not penalise outliers more harshly- it simply counts whether each forecast is inside or outside the acceptable range. \n",
     "\n",
     "Two versions are supported:\n",
     "- Inclusive: Forecast is within or equal to the threshold (`|fcst - obs| ≤ τ`)\n",
@@ -18,7 +18,7 @@
     "\n",
     "## Important Caveat:\n",
     "\n",
-    "While the score is intuitive and operationally appealing, it is not a consistent scoring function. This means that it can encourage hedging. Forecasters may be incentivised to report values that maximise their score rather than reflect their true belief.\n",
+    "While the score is intuitive and operationally appealing, it is not a [consistent scoring function](./Consistent_Scores.ipynb) for common forecast directives such as \"forecast the expected (mean) value\" . This means that it can encourage hedging. Forecasters may be incentivised to report values that maximise their score rather than reflect their true belief.\n",
     "\n",
     "For example, when verifying wind speed forecasts with a fixed threshold (e.g. within 5 knots), a forecast of 5 knots will be scored as \"correct\" for any observed value between 0 and 10 knots. In contrast, a forecast of 0 will only be correct for observations between 0 and 5 knots. This creates an incentive to forecast values that maximise the width of the \"acceptable\" observation band - particularly in skewed or bounded distributions like wind speed or precipitation. In such cases, the best-scoring forecast may systematically over- or under-predict the truth, depending on how the threshold interacts with physical limits.\n",
     "\n",
@@ -27,7 +27,7 @@
     "- All errors outside the threshold are treated equally, whether they are just over or wildly off.\n",
     "- The threshold creates an artificial cutoff that can distort optimisation.\n",
     "\n",
-    "As a result, PERCENT_WITHIN_X is best understood as a user-facing diagnostic, valuable for answering operational questions like \"how often do we get within 2 degrees?\" However, it should not be used for model training or for rigorous forecast intercomparison.\n",
+    "As a result, percent within X is best understood as a user-facing diagnostic, valuable for answering operational questions like \"how often do we get within 2 degrees?\" However, it should not be used for model training or for rigorous forecast intercomparison.\n",
     "\n",
     "For applications with a forecast directive expressed as \"forecast the expected (mean) or the median value\", consider using a consistent scoring metric such as MSE or MAE respectively.\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scores311",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
