xarray nc read decodes timedeltas

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcst = xr.open_dataset(\"forecast_grid.nc\")\n",
-    "obs = xr.open_dataset(\"analysis_grid.nc\")\n",
+    "fcst = xr.open_dataset(\"forecast_grid.nc\", decode_timedelta=True)\n",
+    "obs = xr.open_dataset(\"analysis_grid.nc\", decode_timedelta=True)\n",
     "\n",
     "# Let's select the forecast for the same timestamp as the analysis\n",
     "fcst = fcst.sel(time=obs.time.values)"
