--- a/tutorials/Mean_Absolute_Error.ipynb
+++ b/tutorials/Mean_Absolute_Error.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "83191398-5f8d-4233-9111-d69a8a371340",
    "metadata": {
     "tags": []
@@ -73,8 +73,8 @@
    "outputs": [],
    "source": [
     "# Import some gridded forecasts and one gridded analysis to use in trying mse\n",
-    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
-    "analysis = xarray.open_dataset('analysis_grid.nc')"
+    "forecast = xarray.open_dataset('forecast_grid.nc', decode_timedelta=True)\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc', decode_timedelta=True)"
    ]
   },
   {
