--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "83191398-5f8d-4233-9111-d69a8a371340",
    "metadata": {
     "tags": []
@@ -74,8 +74,8 @@
    "outputs": [],
    "source": [
     "# Import the same gridded forecasts and one gridded analysis used in the MSE tutorial\n",
-    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
-    "analysis = xarray.open_dataset('analysis_grid.nc')"
+    "forecast = xarray.open_dataset('forecast_grid.nc', decode_timedelta=True)\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc', decode_timedelta=True)"
    ]
   },
   {
