--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -28,7 +28,19 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scores'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscores\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcontinuous\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mae\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscores\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcontinuous\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mse\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscores\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcontinuous\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rmse\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'scores'"
+     ]
+    }
+   ],
    "source": [
     "from scores.continuous import mae\n",
     "from scores.continuous import mse\n",
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "83191398-5f8d-4233-9111-d69a8a371340",
    "metadata": {
     "tags": []
@@ -71,8 +83,8 @@
    "outputs": [],
    "source": [
     "# Import the same gridded forecasts and one gridded analysis used in the MSE tutorial\n",
-    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
-    "analysis = xarray.open_dataset('analysis_grid.nc')"
+    "forecast = xarray.open_dataset('forecast_grid.nc', decode_timedelta=True)\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc', decode_timedelta=True)"
    ]
   },
   {
@@ -281,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scores",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
