Changed working on consistent scoring rules, capitalisation, better docstring example for percent within x

--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Percent Within X\n",
     "\n",
-    "The Percent Within X score evaluates how often a continuous single-valued forecast falls within a specified absolute error threshold of the observation. This is a simple and easy to explain metric, particularly useful for applications where a forecast is considered \"close enough\" if it lies within a certain band around the observation.\n",
+    "The \"percent within X\" score evaluates how often a continuous single-valued forecast falls within a specified absolute error threshold of the observation. This is a simple and easy to explain metric, particularly useful for applications where a forecast is considered \"close enough\" if it lies within a certain band around the observation.\n",
     "\n",
     "Unlike traditional error metrics (e.g. MAE or RMSE), the percent within X score does not penalise outliers more harshly- it simply counts whether each forecast is inside or outside the acceptable range. \n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "This score is expressed as a percentage (0-100), representing the fraction of valid forecast-observation pairs that satisfy the condition.\n",
     "\n",
-    "## Important Caveat:\n",
+    "## Important Caveat\n",
     "\n",
     "While the score is intuitive and operationally appealing, it is not a [consistent scoring function](./Consistent_Scores.ipynb) for common forecast directives such as \"forecast the expected (mean) value\" . This means that it can encourage hedging. Forecasters may be incentivised to report values that maximise their score rather than reflect their true belief.\n",
     "\n",
@@ -61,16 +61,16 @@
     "- Floating point precision can be controlled via `rounded_digits`.\n",
     "- The score is positively oriented: higher values indicate better agreement.\n",
     "\n",
-    "## Calculating the PERCENT_WITHIN_X score in `scores`"
+    "## Calculating the percent within X score in `scores`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores.continuous import percent_within_x, mae, pbias\n",
+    "from scores.continuous import percent_within_x, mae\n",
     "\n",
     "# You can view the documentation for the function by running the following\n",
     "# help(percent_within_x)\n",
@@ -87,7 +87,7 @@
    "source": [
     "## Synthetic Forecast and Observation Data\n",
     "\n",
-    "To demonstrate the behavior of the Percent Within X (PERCENT_WITHIN_X) score, we construct synthetic forecast and observation data with realistic characteristics.\n",
+    "To demonstrate the behavior of the percent within X score, we construct synthetic forecast and observation data with realistic characteristics.\n",
     "\n",
     "The dataset simulates a gridded variable over:\n",
     "- 100 daily timesteps (`time`)\n",
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, to demonstrate the caveat above about this score not being consistent, we will evaluate wind speed forecasts that are bounded, such that they do not go below zero. In our case, the single-valued forecast is meant to be interpretted as the median of the predicted distribution, and as such, the Consistent Scoring Rule would be the Mean Absolute Error (MAE). We will evaluate the percent of forecasts within 5 knots of the observation. We will also create a hedged forecast which is attempting to cheat the score by never forecasting less than 5 knots. "
+    "Next, consider a variable that cannot fall below zero (e.g., wind speed) and a single-valued forecast interpreted as the median of its predictive distribution. In this setting, the appropriate Consistent Scoring Rule is the Mean Absolute Error (MAE). We also examine the percentage of forecasts that fall within 5 knots of the observation. However, we show that this “percent within X” metric is not a Consistent Scoring Rule, since a forecaster could game it by never predicting values below 5 knots."
    ]
   },
   {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
     "axes[0].plot([-5, max_val], [0, max_val+5], '--', color='gray')\n",
     "axes[0].set_xlim(0, max_val+5)\n",
     "axes[0].set_ylim(0, max_val+5)\n",
-    "axes[0].set_title(\"Forecast vs Observed (Original)\")\n",
+    "axes[0].set_title(\"Forecast (Original) vs Observed\")\n",
     "axes[0].set_xlabel(\"Forecast (knots)\")\n",
     "axes[0].set_ylabel(\"Observed (knots)\")\n",
     "\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
     "\n",
     "# Create summary table\n",
     "summary_df = pd.DataFrame({\n",
-    "    \"Percent Within ±5\": [pwx_orig, pwx_hedged],\n",
+    "    \"percent within ±5\": [pwx_orig, pwx_hedged],\n",
     "    \"MAE (knots)\": [mae_orig_val, mae_hedged_val],\n",
     "}, index=[\"Original Forecast\", \"Hedged Forecast (≥5)\"])\n",
     "\n",
