--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -36,13 +36,13 @@
     "Inclusive form:\n",
     "\n",
     "$$\n",
-    "\\text{PERCENT\\_WITHIN\\_X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| \\leq \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
+    "\\text{PERCENT WITHIN X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| \\leq \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
     "$$\n",
     "\n",
     "Exclusive form:\n",
     "\n",
     "$$\n",
-    "\\text{PERCENT\\_WITHIN\\_X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| < \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
+    "\\text{PERCENT WITHIN X} = 100 \\cdot \\frac{\\sum_{i=1}^{N} \\mathbf{1}(|x_i - y_i| < \\tau)}{\\sum_{i=1}^{N} \\mathbf{1}_{\\text{valid}}}\n",
     "$$\n",
     "\n",
     "Where:\n",
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
