fix grammar in angular data notebook

--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -7,7 +7,7 @@
     "# Angular data\n",
     "Sometimes we are interested in evaluating angular forecasts, such as a wind direction forecast against wind direction observations. \n",
     "\n",
-    "Several metrics in `scores` can be used to evaluate angular forecasts expressed in degrees. If the `is_angular` argument is available in a metric, then that function can be used with angular data and it will handle the discontinuity that occurs between 360 degrees and 0. Simply set `is_angular=True`. It does this by calculating the length of the smaller of the two explementary angles between the two sources of data (e.g., forecast and observed).\n",
+    "Several metrics in `scores` can be used to evaluate angular forecasts expressed in degrees. If the `is_angular` argument is available in a metric, then that function can be used with angular data and it will handle the discontinuity that occurs between 360 degrees and 0. Simply set `is_angular=True`. It does this by calculating the measure of the smaller of the two explementary angles between the two sources of data (e.g., forecast and observed).\n",
     "\n",
     "If your data is in radians, you can convert it to degrees my multiplying your data by 180/pi (you can use `numpy.pi`)."
    ]
@@ -838,12 +838,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value is far higher, since we didn't use the smaller length of the two explementary angle.\n",
+    "The value is far higher, since we didn't use the smaller length of the two explementary angles.\n",
     "\n",
     "## Other things to try:\n",
     "- Try out some of the other metrics set up to work with angular data including MSE, RMSE, and the Flip-Flop Index.\n",
     "- Read up on the Circular Flip-Flop Index which handles angular data. [Griffiths, D., Loveday, N., Price, B., Foley, M. and McKelvie, A., 2021. Circular Flip-Flop Index: quantifying revision stability of forecasts of direction. Journal of Southern Hemisphere Earth Systems Science, 71(3), pp.266-271.](https://doi.org/10.1071/ES21010)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -862,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
