change distance to measure further down

--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -838,7 +838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value is far higher, since we didn't use the smaller length of the two explementary angles.\n",
+    "The value is far higher, since we didn't use the smaller measure of the two explementary angles.\n",
     "\n",
     "## Other things to try:\n",
     "- Try out some of the other metrics set up to work with angular data including MSE, RMSE, and the Flip-Flop Index.\n",
