--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -58,7 +58,7 @@
     "- Set `is_inclusive=True` (default) for `≤ τ` logic; set to `False` for strict `< τ`.\n",
     "- Supports angular data with `is_angular=True`.\n",
     "- Supports `reduce_dims` and `preserve_dims` to aggregate across or retain specific dimensions.\n",
-    "- Floating point precision can be controlled via `rounded_digits`.\n",
+    "- Floating point precision can be controlled via `decimals`.\n",
     "- The score is positively oriented: higher values indicate better agreement.\n",
     "\n",
     "## Calculating the percent within X score in `scores`"
@@ -356,13 +356,13 @@
     "\n",
     "Explore the `is_angular` option within percent_within_x, relevant if forecasting direction in degrees.\n",
     "\n",
-    "Explore the `rounded_digits` option which is meant to help control floating point precision issues. For example, a value that should be 5 might be imported as 4.999999998, causing it to incorrectly fall outside a threshold - rounding the error before comparison avoids this."
+    "Explore the `decimals` option which is meant to help control floating point precision issues. For example, a value that should be 5 might be imported as 4.999999998, causing it to incorrectly fall outside a threshold - rounding the error before comparison avoids this."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scores311",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
