Strange that earlier commits didn't take, not sure why.

--- a/tutorials/Percent_Within_X.ipynb
+++ b/tutorials/Percent_Within_X.ipynb
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "# Calculate percent within\n",
+    "# Calculate percent within X\n",
     "percent_within_x_orig = percent_within_x(fcst=fcst, obs=obs, threshold=5.0, is_inclusive=True)\n",
     "percent_within_x_hedged = percent_within_x(fcst=fcst_hedged, obs=obs, threshold=5.0, is_inclusive=True)\n",
     "\n",
