--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -106,6 +106,7 @@
    "source": [
     "- [Binary (Categorical/Contingency/Confusion Matrix) Scores](./Binary_Contingency_Scores.ipynb)\n",
     "- [FIRM](./FIRM.ipynb)\n",
+    "- [Risk matrix score](./Risk_Matrix_Score.ipynb)\n",
     "- [SEEPS](./SEEPS.ipynb)"
    ]
   },
