Add new metric: percent within X (#865)
* Add percent_within_x score
* Adding tutorial
* Added docstrings
* Update to mathjax for percent_within_x
* adding name to zendo and responding to reviews

---------

Signed-off-by: thomaspagano <tom.pagano@bom.gov.au>
Co-authored-by: Tom Pagano (he/him) <tompagan@bom.gov.au>
Co-authored-by: Tennessee Leeuwenburg <tennessee.leeuwenburg@bom.gov.au>

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -53,6 +53,7 @@
     "- [MAE](./Mean_Absolute_Error.ipynb)\n",
     "- [RMSE](./Root_Mean_Squared_Error.ipynb)\n",
     "- [MSE](./Mean_Squared_Error.ipynb)\n",
+    "- [Percent within X](./Percent_Within_X.ipynb)\n",
     "- [Nash–Sutcliffe Model Efficiency Coefficient (NSE)](./NSE.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Spearman's Correlation](./Spearmans_Correlation.ipynb)\n",
