--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -251,7 +251,7 @@
    },
    "source": [
     "- [Dimension Handling](./Dimension_Handling.ipynb)\n",
-    "- [Weighting Results](./Weighting_Results.ipynb)\n",
+    "- [Weighting and Masking](./Weighting_And_Masking.ipynb)\n",
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
@@ -265,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scores",
    "language": "python",
    "name": "python3"
   },
