--- a/tutorials/Risk_Matrix_Score.ipynb
+++ b/tutorials/Risk_Matrix_Score.ipynb
@@ -2664,7 +2664,7 @@
     "\n",
     "## Reference\n",
     "\n",
-    "Taggart, R. J., & Wilke, D. J. (2025). Warnings based on risk matrices: a coherent framework with consistent evaluation. *Nat. Hazards Earth Syst. Sci.*, 25, 2657–2677. https://doi.org/10.5194/nhess-25-2657-2025"
+    "Taggart, R. J., & Wilke, D. J. (2025). Warnings based on risk matrices: a coherent framework with consistent evaluation. *Natural Hazards and Earth System Sciences*, 25(8), 2657–2677. https://doi.org/10.5194/nhess-25-2657-2025"
    ]
   }
  ],
