--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -107,6 +107,7 @@
    "source": [
     "- [Binary (Categorical/Contingency/Confusion Matrix) Scores](./Binary_Contingency_Scores.ipynb)\n",
     "- [FIRM](./FIRM.ipynb)\n",
+    "- [Risk Matrix Score](./Risk_Matrix_Score.ipynb)\n",
     "- [SEEPS](./SEEPS.ipynb)"
    ]
   },
@@ -191,36 +192,6 @@
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Q-Q plots](./Q-Q_plots.ipynb)\n",
     "- [Receiver Operating Characteristic (ROC)](./ROC.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ae976a7",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "## Emerging"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ef3d627a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "nbsphinx-gallery"
-    ]
-   },
-   "source": [
-    "- [Risk Matrix Score](./Risk_Matrix_Score.ipynb)"
    ]
   },
   {
