aggregation sum supports ds weights

--- a/tutorials/Weighting_And_Masking.ipynb
+++ b/tutorials/Weighting_And_Masking.ipynb
@@ -1067,7 +1067,7 @@
    "metadata": {},
    "source": [
     "## Masking example\n",
-    "Suppose we want to mask the results over the tropics (within 23.5 degrees of the equator), we could either preprocess our data with a mask, or alternatively we can use the `weights` arg to create a mask. A mask can be created by assigning values of 0 to where we don't want those points contributing to the mean score and values of 1 that we want to include in the contribution of the mean score. Let's mask the tropics and calculate the MSE"
+    "Suppose we want to mask the results over the tropics (within 23.5 degrees of the equator), we could either preprocess our forecast and observation data with a mask, or alternatively we can use the `weights` arg to create a mask. A mask can be created by assigning values of 0 to where we don't want those points contributing to the mean score and values of 1 that we want to include in the contribution of the mean score. Let's mask the tropics and calculate the MSE"
    ]
   },
   {
