--- a/tutorials/Weighting_And_Masking.ipynb
+++ b/tutorials/Weighting_And_Masking.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Let's step through an example of how the weighting works. Suppose we have a 2D grid and we want to calculate the weighted mean with some weights.\n",
     "\n",
-    "First, the squared error $x$ is calculated at each point, if we have weights $w$, we can calculate the weighted MSE, $\\bar{x}$ as\n",
+    "First, the squared error $x_{i, j}$ at the $(i,j)$th point is calculated. If we have weights $w$, we can calculate the weighted Mean Squared Error (MSE), $\\bar{x}$ as\n",
     "$$\n",
     "\\bar{x} = \\frac{\\sum_{i=1}^{M} \\sum_{j=1}^{N} w_{i,j} \\, x_{i,j}}{\\sum_{i=1}^{M} \\sum_{j=1}^{N} w_{i,j}}\n",
     "$$\n",
@@ -2735,7 +2735,7 @@
     }
    ],
    "source": [
-    "# First calculate the pointwise squared error\n",
+    "# First calculate the squared error at each point\n",
     "se = mse(fcst, obs, preserve_dims=\"all\")\n",
     "lat_weighted_mse = aggregate(se, reduce_dims=[\"time\", \"latitude\", \"longitude\"], weights=lat_weights)\n",
     "lat_weighted_mse"
