--- a/tutorials/Weighting_And_Masking.ipynb
+++ b/tutorials/Weighting_And_Masking.ipynb
@@ -1058,7 +1058,13 @@
     "In most cases, filling missing values with zeros is a sensible approach, since a weight of zero means \"this grid cell does not contribute.\" You can do this with:\n",
     "```python\n",
     "weights = weights.fillna(0)\n",
-    "```"
+    "```\n",
+    "\n",
+    "To demonstrate why this is the case, imagine that we have 3 points and we want to calculate a weighted mean. Let's say that our errors array is $x=[1, 3, 5]$. Now suppose that our weights array is $w=[3, 1, \\mathrm{NaN}]$. We expect in this case that the weighted mean should only consist of the first two points and give us a weighted mean of 1.5. Let's step through this:\n",
+    "1. Make the NaN value in the weights 0, so that our weights are [3, 1, 0]\n",
+    "2. Calculate the weighted mean as\n",
+    "\n",
+    "$$\\mu_w = \\frac{\\sum_{i=1}^{n} w_i x_i}{\\sum_{i=1}^{n} w_i} = \\frac{1 \\times 3 + 3 \\times 1 + 5 \\times 0}{3 + 1 + 0}=\\frac{6}{4}=1.5$$\n"
    ]
   },
   {
@@ -2772,12 +2778,20 @@
     "-  If weights are provided but `reduce_dims` is None (i.e., no reduction), a `UserWarning`\n",
     "    is emitted since the weights will be ignored\n",
     "\n",
-    "There is also a `method` arg which takes `\"mean\"` (default) or `\"sum\"`. In most cases `\"mean\"` is appropriate for weighted aggregations. `method=\"sum\"` can also be used for producing weighted sums. This is needed when calculating weighted contingency table scores such as probability of detection. We leave this as an exercise for the reader.\n",
+    "There is also a `method` arg which takes `\"mean\"` (default) or `\"sum\"`. In most cases `\"mean\"` is appropriate for weighted aggregations. `method=\"sum\"` can also be used for producing weighted sums. A use case for `method=\"sum\"` is when calculating a weighted contingency table score such as probability of detection. In this case a weighted sum is applied to the misses and the hits, before calculating the probability of detection.\n",
     "\n",
     "## Things to try next\n",
     "- Try and calculate weighted scores with methods other than MSE\n",
     "- Download a population density grid and create a mean score weighted by population density."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33cf3983-c385-4ab1-9f63-10cc3c4ca76a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
