Weighting strategy now normalises weights in better keeping with general practice (#899)
* add weighted_mean_func
* weighting also works with .sum
* weights no longer allow nans
* change mse logic
* implementation of dataset weights
* remove old apply_weights function
* update tutorials that used weighting

---------

Signed-off-by: Nicholas Loveday <48701367+nicholasloveday@users.noreply.github.com>
Co-authored-by: Nikeeth Ramanathan <nikeeth.ramanathan@gmail.com>

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -168,6 +168,7 @@
     ]
    },
    "source": [
+    "- [Weighting and Masking](./Weighting_And_Masking.ipynb)\n",
     "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)\n",
     "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
    ]
@@ -222,7 +223,6 @@
    },
    "source": [
     "- [Dimension Handling](./Dimension_Handling.ipynb)\n",
-    "- [Weighting Results](./Weighting_Results.ipynb)\n",
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scores",
    "language": "python",
    "name": "python3"
   },
