--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -85,7 +85,9 @@
     "- [Brier Score](./Brier_Score.ipynb)\n",
     "- [CRPS for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
     "- [CRPS for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
-    "- [twCRPS for ensemble forecasts](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)"
+    "- [twCRPS for ensemble forecasts](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)\n",
+    "- [Probability Integral Transform (PIT)](./PIT.ipynb)\n",
+    "- [Rank histogram](./Rank_Histogram.ipynb)"
    ]
   },
   {
