--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -168,7 +168,7 @@
     ]
    },
    "source": [
-    "- [Weighting and Masking](./Weighting_And_Masking.ipynb)\n",
+    "- [Weighting Results](./Weighting_Results.ipynb)\n",
     "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)\n",
     "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
    ]
@@ -236,7 +236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scores",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
