Finishing up the checklist (adding things to try next in the tutorial)

--- a/tutorials/REV_Score.ipynb
+++ b/tutorials/REV_Score.ipynb
@@ -1016,6 +1016,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Things to try next\n",
+    "\n",
+    "The REV score uses the probability of detection and false alarm rate in its calculations. These are used in the ROC score. See the [ROC tutorial](ROC_tutorial.ipynb) and construct an example where both ROC and REV are calculated on the same dataset.\n",
+    "\n",
+    "To better understand the \"rational user\" outputs, created forecasts that are probabilistically reliable, and then create forecasts are biased. See how the results for the rational user and the maximum potential value REV differ for these two forecasting systems. \n",
+    "\n",
+    "Explore the effects of ensemble size on economic value. Create a large ensemble (e.g. 500 members) and the progressively thin (sub-sample) the ensemble (100, 50, 25, 10, 5 members) and see how value changes, if at all. \n",
+    "\n",
+    "Create forecast datasets with seemingly high accuracy and low accuracy, as measured by the Critical Success Index (CSI). Can you generate scenarios where one forecast has a higher CSI but lower REV than the other? Do this by plotting CSI versus REV for a variety of cost-loss ratios. What does this tell you about the difference between accuracy and value? \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
     "- Murphy, A. H. (1977). The value of climatological, categorical and probabilistic forecasts in the cost-loss ratio situation. Monthly Weather Review, 105(7), 803-816.\n",
@@ -1025,6 +1040,11 @@
     "- Thornes, J. E. (2002, January). The Quality and Value of Road Weather Forecast. In The Proceedings of The 11th. PIARC International Winter Road Congress. (https://proceedings-sapporo2002.piarc.org/en/pdf/doc_pdf/communications/V58e.pdf)\n",
     "- Zhu, Y., Toth, Z., Wobus, R., Richardson, D., & Mylne, K. (2002). The economic value of ensemble-based weather forecasts. Bulletin of the American Meteorological Society, 83(1), 73-84."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
