--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -128,6 +128,7 @@
     ]
    },
    "source": [
+    "- [Contiguous Rain Area](./Contiguous_Rain_Area.ipynb)\n",
     "- [Fractions Skill Score](./Fractions_Skill_Score.ipynb)"
    ]
   },
@@ -250,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
